; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/powerpc/kernel/extr_clock.c_clk_set_parent.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/powerpc/kernel/extr_clock.c_clk_set_parent.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 (%struct.clk*, %struct.clk*)* }
%struct.clk = type { i32 }

@clk_functions = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@ENOSYS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @clk_set_parent(%struct.clk* %0, %struct.clk* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.clk*, align 8
  %5 = alloca %struct.clk*, align 8
  store %struct.clk* %0, %struct.clk** %4, align 8
  store %struct.clk* %1, %struct.clk** %5, align 8
  %6 = load i32 (%struct.clk*, %struct.clk*)*, i32 (%struct.clk*, %struct.clk*)** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @clk_functions, i32 0, i32 0), align 8
  %7 = icmp ne i32 (%struct.clk*, %struct.clk*)* %6, null
  br i1 %7, label %8, label %13

8:                                                ; preds = %2
  %9 = load i32 (%struct.clk*, %struct.clk*)*, i32 (%struct.clk*, %struct.clk*)** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @clk_functions, i32 0, i32 0), align 8
  %10 = load %struct.clk*, %struct.clk** %4, align 8
  %11 = load %struct.clk*, %struct.clk** %5, align 8
  %12 = call i32 %9(%struct.clk* %10, %struct.clk* %11)
  store i32 %12, i32* %3, align 4
  br label %16

13:                                               ; preds = %2
  %14 = load i32, i32* @ENOSYS, align 4
  %15 = sub nsw i32 0, %14
  store i32 %15, i32* %3, align 4
  br label %16

16:                                               ; preds = %13, %8
  %17 = load i32, i32* %3, align 4
  ret i32 %17
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
